@@ -110,6 +110,7 @@
 /examples/cmdline
 /examples/fprintf
 /examples/fprintf_va
+/examples/generic_file
 /examples/generic_malloc
 /examples/generic_mutex
 /examples/memmap
