@@ -1,22 +1,0 @@
-# frozen_string_literal: true
-
-# rubocop:disable Lint/EmptyClass
-
-if KernAux::Version.with_io?
-  module KernAux
-    ##
-    # File simulator.
-    #
-    class File
-      ##
-      # @!method initialize(out)
-      # Create a file.
-      #
-      # @param out [Proc] writing method
-
-      # @!parse [ruby]
-    end
-  end
-end
-
-# rubocop:enable Lint/EmptyClass
