@@ -7,6 +7,7 @@
 #include <kernaux/macro.h>
 #include <kernaux/version.h>
 
+#include <kernaux/generic/file.h>
 #include <kernaux/generic/malloc.h>
 #include <kernaux/generic/mutex.h>
 
