@@ -18,8 +18,8 @@ extern "C" {
  * \param va A value identifying a variable arguments list
  * \return The number of characters that are sent to the output function, not counting the terminating null character
  */
-@comment_line_io@int  kernaux_fprintf(KernAux_File file, void* arg, const char* format, ...);
-@comment_line_io@int kernaux_vfprintf(KernAux_File file, void* arg, const char* format, va_list va);
+@comment_line_io@int  kernaux_fprintf(KernAux_OldFile file, void* arg, const char* format, ...);
+@comment_line_io@int kernaux_vfprintf(KernAux_OldFile file, void* arg, const char* format, va_list va);
 
 /**
  * Tiny [v]snprintf implementation
