@@ -10,6 +10,7 @@
 void *KernAux_Malloc_calloc(KernAux_Malloc malloc, size_t nmemb, size_t size)
 {
     KERNAUX_ASSERT(malloc);
+    KERNAUX_ASSERT(malloc->calloc);
 
     return malloc->calloc(malloc, nmemb, size);
 }
@@ -17,6 +18,7 @@ void *KernAux_Malloc_calloc(KernAux_Malloc malloc, size_t nmemb, size_t size)
 void KernAux_Malloc_free(KernAux_Malloc malloc, void *ptr)
 {
     KERNAUX_ASSERT(malloc);
+    KERNAUX_ASSERT(malloc->free);
 
     malloc->free(malloc, ptr);
 }
@@ -24,6 +26,7 @@ void KernAux_Malloc_free(KernAux_Malloc malloc, void *ptr)
 void *KernAux_Malloc_malloc(KernAux_Malloc malloc, size_t size)
 {
     KERNAUX_ASSERT(malloc);
+    KERNAUX_ASSERT(malloc->malloc);
 
     return malloc->malloc(malloc, size);
 }
@@ -31,6 +34,7 @@ void *KernAux_Malloc_malloc(KernAux_Malloc malloc, size_t size)
 void *KernAux_Malloc_realloc(KernAux_Malloc malloc, void *ptr, size_t size)
 {
     KERNAUX_ASSERT(malloc);
+    KERNAUX_ASSERT(malloc->realloc);
 
     return malloc->realloc(malloc, ptr, size);
 }
