@@ -7,14 +7,14 @@
 
 #include <stddef.h>
 
-struct KernAux_File KernAux_File_create(const KernAux_File_Out out)
+struct KernAux_OldFile KernAux_OldFile_create(const KernAux_OldFile_Out out)
 {
-    struct KernAux_File file;
-    KernAux_File_init(&file, out);
+    struct KernAux_OldFile file;
+    KernAux_OldFile_init(&file, out);
     return file;
 }
 
-void KernAux_File_init(const KernAux_File file, const KernAux_File_Out out)
+void KernAux_OldFile_init(const KernAux_OldFile file, const KernAux_OldFile_Out out)
 {
     KERNAUX_ASSERT(file);
     KERNAUX_ASSERT(out);
